# drf26.2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
lms/: models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_course_preview.py  0003_course_owner_lesson_owner.py  0004_alter_lesson_preview.py  0005_subscription.py  0006_payment.py  0007_alter_payment_product_price_and_more.py
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/fixtures/: groups.json
users/management/commands/: create_test_users.py  seed_payments.py  seed_users.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_customuser_last_login.py
